<resources>
    <string name="app_name">iTrueFace</string>

    <string name="action_settings">Settings</string>

    <string name="home">首页</string>
    <string name="me">个人中心</string>
    <string name="find">发现</string>
    <string name="city">城市</string>
    <string name="search">搜索</string>
    <string name="message">消息</string>
    <string name="all">全部</string>
    <string name="course_name">课程名称：</string>
    <string name="speaker">主讲 : </string>

    <string name="login_btn">登录</string>
    <string name="linkman">联系人</string>
    <string name="account">我的账户</string>
    <string name="course">我的课程</string>
    <string name="teacher">老师</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="phone_num">电话号码</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="use_accout">使用以下账号马上登录</string>
    <string name="register">注册</string>
    <string name="noinformation">电话号码和密码不能为空</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="sure_password">重复密码</string>
    <string name="auth">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="interst">兴趣爱好</string>
    <string name="education">早期教育</string>
    <string name="languagestudy">外语学习</string>
    <string name="interst_top">Top 50</string>
    <string name="screen">筛选</string>
    <string name="now_course">最新课程</string>
    <string name="cancel">取消</string>
    <string name="history_search">历史搜索:</string>
    <string name="hot_search">热门搜索:</string>
    <string name="input_messagee">请输入老师，课程名称或地点</string>
    <string name="defalut_string"></string>


    <string name="classroom">我的课堂( %1$d )</string>
    <string name="friend">我的好友( %1$d )</string>
    <string name="teacher_name">老师姓名：%1$s</string>
    <string name="teacher_phone">联系方式：%1$s</string>
    <string name="teacher_introduce">老师简介：</string>
    <string name="course_tobepaid">待支付</string>
    <string name="course_alreadypaid">已支付</string>
    <string name="course_nopaid">未支付</string>
    <string name="course_unsubscribe">已退订</string>
    <string name="course_count">去打分</string>
    <string name="course_price">课程价格：%1$s</string>
    <string name="course_age">适学年龄：%1$s</string>
    <string name="course_age_text">适学年龄：</string>
    <string name="course_teacher_kind">授客方式：</string>
    <string name="study_address">学习地点：</string>
    <string name="teacher_indrouce">老师介绍：</string>
    <string name="advisory_message">咨询留言</string>
    <string name="reserve_course">预定课时</string>
    <string name="course_detail">课程详情</string>
    <string name="course_name_text">课程名称 :%1$s </string>
    <string name="unsubscribe">退订</string>
    <string name="logout">退出登录</string>
    <string name="report">举报中心</string>
    <string name="update">版本更新</string>
    <string name="about">关于</string>
    <string name="price">元/小时</string>
    <string name="lookothercourse">查看其他课程</string>
    <string name="goback">返回</string>

    <!-- core-->
    <string name="test_text">测试文本</string>
    <string name="core_error_text">抱歉无法加载出来〒_〒</string>
    <string name="core_error_button">重新加载</string>
    <string name="pull_to_loading">正在加载，请稍候...</string>
    <string name="theme_name">主题</string>
    <string name="theme_change">更换主题</string>
    <string name="contacts">联系人</string>

    <!-- setting-->
    <string name="suggestiong">意见反馈</string>

</resources>
