<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/stroken_color">
    <com.evast.itrueface.weight.TemplateTitle
        android:id="@+id/login_title" android:layout_width="match_parent"
        android:layout_height="45dp" android:background="@color/white"/>
    <ImageView
        android:layout_width="match_parent" android:src="@mipmap/login_headview"
        android:layout_height="@dimen/login_headview_height" android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="match_parent" android:layout_margin="@dimen/login_edit_dimen">
        <EditText
            android:id="@+id/login_phone" android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height" android:background="@mipmap/edit_background"
            android:hint="@string/phone_num" android:textColorHint="@color/gray"
            android:textColor="@color/black" android:textSize="12dp"
            android:text="13552767417" />
        <EditText
            android:id="@+id/login_password" android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height" android:layout_marginTop="@dimen/login_edit_dimen"
            android:hint="@string/password" android:textColorHint="@color/gray"
            android:textColor="@color/black" android:background="@mipmap/edit_background"
            android:textSize="12dp" android:password="true"
            android:text="e10adc3949ba59abbe56e057f20f883e" />
        <TextView
            android:id="@+id/forget_password" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/forget_password"
            android:textColor="@color/blue" android:layout_gravity="right"
            android:layout_marginTop="@dimen/login_edit_dimen"/>
        <Button
            android:id="@+id/login_loginbtn" android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height" android:text="@string/login_btn"
            android:background="@drawable/login_btnbg" android:textColor="@color/white"
            android:layout_marginTop="@dimen/login_btn_margintop"/>
        <TextView
            android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" android:textColor="@color/gray"
            android:text="@string/use_accout" android:layout_marginTop="@dimen/login_btn_margintop"/>
        <LinearLayout
            android:layout_width="match_parent" android:orientation="horizontal"
            android:layout_height="wrap_content" android:gravity="center"
            android:layout_marginTop="@dimen/login_btn_margintop">
            <ImageView
                android:id="@+id/weibo_btn" android:layout_width="@dimen/other_login_iconheight"
                android:layout_height="@dimen/other_login_iconheight" android:src="@mipmap/weibo_icon"/>
            <ImageView
                android:id="@+id/weixin_btn" android:layout_width="@dimen/other_login_iconheight"
                android:layout_height="@dimen/other_login_iconheight" android:src="@mipmap/weixin_icon"
                android:layout_marginLeft="@dimen/login_btn_margintop"/>
            <ImageView
                android:id="@+id/qq_btn" android:layout_width="@dimen/other_login_iconheight"
                android:layout_height="@dimen/other_login_iconheight" android:src="@mipmap/qq_icon"
                android:layout_marginLeft="@dimen/login_btn_margintop"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
