<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/gray" android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/find_one_image" android:layout_width="match_parent"
            android:layout_height="match_parent" android:scaleType="centerCrop"
            android:src="@mipmap/find_one_image"/>
        <TextView
            android:layout_width="wrap_content" android:layout_centerInParent="true"
            android:layout_height="wrap_content" android:textColor="@color/white"
            android:text="@string/interst"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/find_two_image" android:layout_width="match_parent"
            android:layout_height="match_parent" android:scaleType="centerCrop"
            android:src="@mipmap/find_two_image"/>
        <TextView
            android:layout_width="wrap_content" android:layout_centerInParent="true"
            android:layout_height="wrap_content" android:textColor="@color/white"
            android:text="@string/education"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/find_three_image" android:layout_width="match_parent"
            android:layout_height="match_parent" android:scaleType="centerCrop"
            android:src="@mipmap/find_three_image"/>
        <TextView
            android:layout_width="wrap_content" android:layout_centerInParent="true"
            android:layout_height="wrap_content" android:textColor="@color/white"
            android:text="@string/languagestudy"/>
    </RelativeLayout>

</LinearLayout>
